--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/scripts.js"></script>
+    <title>Delani Studio</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
+
 </head>
 
 <body>
+    <div class="container">
 
+    </div>
 </body>
 
 </html>
