--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
 <body>
     <div class="container">
+        <div class="row">
+            <div class="navbar">
 
+            </div>
+        </div>
     </div>
 </body>
 
