--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <div class="container">
         <div class="row">
             <div class="navbar">
-
+                <ul>
+                    <li>HOME</li>
+                    <li>ABOUT US</li>
+                    <li>SERVICES</li>
+                    <li>WHAT WE DO</li>
+                    <li>PORTFOLIO</li>
+                    <li>CONTACT US</li>
+                </ul>
             </div>
         </div>
     </div>
