add header tags

--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="navbar">
-                <ul>
-                    <li>HOME</li>
-                    <li>ABOUT US</li>
-                    <li>SERVICES</li>
-                    <li>WHAT WE DO</li>
-                    <li>PORTFOLIO</li>
-                    <li>CONTACT US</li>
-                </ul>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="navbar">
+                    <ul>
+                        <li>HOME</li>
+                        <li>ABOUT US</li>
+                        <li>SERVICES</li>
+                        <li>WHAT WE DO</li>
+                        <li>PORTFOLIO</li>
+                        <li>CONTACT US</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </header>
+
 </body>
 
 </html>
