--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         </div>
     </header>
 
+    <div class="container">
+        <div class="section1">
+            <div class="row">
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
