add paragraph element

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     </header>
 
     <div class="container">
-        <div class="section1">
+        <div class="section1" id="home">
             <div class="row">
-
+                <div class="first-text jumbotron">
+                    <p><BR><BR><BR></p>
+                </div>
             </div>
         </div>
     </div>
