add image to webpage

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="row">
                 <div class="first-text jumbotron">
                     <p><BR><BR><BR></p>
+                    <img src="assets/backgrounds/h_img.jpg" alt="">
                 </div>
             </div>
         </div>
