add paragraph and header elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delani Studio</title>
+    <title>Ouko Studio</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -38,6 +38,12 @@
                 <div class="first-text jumbotron">
                     <p><BR><BR><BR></p>
                     <img src="assets/backgrounds/h_img.jpg" alt="">
+                    <p>
+                        <bold><BR><BR><BR>WELCOME<BR> TO OUKO STUDIOS</bold>
+                    <h4>
+                        AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT<br><br><br>
+                    </h4>
+                    </p>
                 </div>
             </div>
         </div>
