--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
         <div class="section1" id="home">
             <div class="row">
                 <div class="first-text jumbotron">
-                    <p><BR><BR><BR></p>
                     <img src="assets/backgrounds/h_img.jpg" alt="">
-                    <p>
-                        <bold><BR><BR><BR>WELCOME<BR> TO OUKO STUDIOS</bold>
-                    <h4>
-                        AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT<br><br><br>
-                    </h4>
-                    </p>
+                    <div class="introduction">
+                        <img src="assets/logo/logo.png" alt="">
+                        <h4>WELCOME <br>TO OUKO STUDIOS</h4>
+                        <small>
+                            AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
+                        </small>
+                    </div>
+
+                    <!-- <img src="assets/mouse_click.png" alt=""> -->
                 </div>
             </div>
         </div>
