add mouse image to page

--- a/index.html
+++ b/index.html
@@ -36,16 +36,20 @@
         <div class="section1" id="home">
             <div class="row">
                 <div class="first-text jumbotron">
-                    <img src="assets/backgrounds/h_img.jpg" alt="">
+                    <img class="background" src="assets/backgrounds/h_img.jpg" alt="">
                     <div class="introduction">
-                        <img src="assets/logo/logo.png" alt="">
-                        <h4>WELCOME <br>TO OUKO STUDIOS</h4>
+                        <img class="logo" src="assets/logo/logo.png" alt="">
+                        <h4>WELCOME</h4>
+                        <h4>TO OUKO STUDIOS</h4>
                         <small>
                             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
                         </small>
+
+                    </div>
+                    <div>
+                        <img class="mouse" src="assets/mouse_click.png" alt="">
                     </div>
 
-                    <!-- <img src="assets/mouse_click.png" alt=""> -->
                 </div>
             </div>
         </div>
