add header elements

--- a/index.html
+++ b/index.html
@@ -35,24 +35,32 @@
     <div class="container">
         <div class="section1" id="home">
             <div class="row">
-                <div class="first-text jumbotron">
-                    <img class="background" src="assets/backgrounds/h_img.jpg" alt="">
-                    <div class="introduction">
-                        <img class="logo" src="assets/logo/logo.png" alt="">
-                        <h4>WELCOME</h4>
-                        <h4>TO OUKO STUDIOS</h4>
-                        <small>
-                            AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
-                        </small>
-
-                    </div>
-                    <div>
-                        <img class="mouse" src="assets/mouse_click.png" alt="">
-                    </div>
+                <img class="background" src="assets/backgrounds/h_img.jpg" alt="">
+                <div class="introduction">
+                    <img class="logo" src="assets/logo/logo.png" alt="">
+                    <h4>WELCOME</h4>
+                    <h4>TO OUKO STUDIOS</h4>
+                    <small>
+                        AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
+                    </small>
 
                 </div>
+                <div>
+                    <img class="mouse" src="assets/mouse_click.png" alt="">
+                </div>
+
             </div>
         </div>
+    </div>
+    </div>
+
+    <div class="container">
+        <div>
+            <div class="row">
+                <h4>ABOUT US</h4>
+            </div>
+        </div>
+
     </div>
 
 </body>
