add paragragh elements

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
         <div>
             <div class="row">
                 <h4>ABOUT US</h4>
+                <p>
+                    When you work with us, you are part of a team of committed collaborators.All aspects of our software
+                    development process are integrated, iterative and agile.
+                </p>
+                <p>
+                    Our approach unifies design, development and project management to create exceptional products.
+                </p>
+                <p>
+                    We start each project by understanding our business goals,the user's needs and the products
+                    requirements.
+                </p>
+                <p>
+                    Then we help translate them into effective and elegant solutions.
+                </p>
             </div>
         </div>
 
