add new container

--- a/index.html
+++ b/index.html
@@ -79,10 +79,21 @@
     <div class="container">
         <div id="services">
             <img class="simage" src="assets/backgrounds/s_image.jpg" alt="">
+            <div class="service">
+                <h4>SERVICES</h4>
+
+            </div>
         </div>
 
     </div>
 
+    <div class="container">
+        <div id="do">
+            <h4>WHAT WE DO</h4>
+
+        </div>
+
+    </div>
 </body>
 
 </html>
