add paragraph elements to page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="service">
                 <h4>SERVICES</h4>
 
+
             </div>
         </div>
 
@@ -91,9 +92,87 @@
         <div id="do">
             <h4>WHAT WE DO</h4>
 
+            <div class="box">
+                <div id="design2">
+                    <div id="designIcon2">
+                        <img src="assets/services_icons/dev_icon.png" alt="">
+                    </div>
+                    <div id="designText2">
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                            They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="box">
+                <div id="design1">
+                    <div id="designIcon1">
+                        <img src="assets/services_icons/product_icon.png" alt="">
+                    </div>
+                    <h5></h5>
+                    <div id="designText1">
+                        <p>
+                            Planning and development is iterative. Because we are constantly coding and testing, the
+                            products we build are always ready to go live.
+                            This iterative process allows for changes as business requirements evolve.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
     </div>
+
+    <div class="container">
+        <div class="card-deck">
+            <div class="card" id="design">
+                <div id="designIcon">
+                    <img class="icon1" src="assets/services_icons/design_icon.png" alt="">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Design</h5>
+                </div>
+                <div id="designText">
+                    <p>
+                        Our design practice offers a full range of services including brand strategy, interaction
+                        and
+                        visual design and user experience testing.
+                        Throughout your project, our designers create and implement visual design and workflows,
+                        solicit
+                        user feedback and work with you to make sure what gets built is what is needed.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional
+                        content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
