--- a/index.html
+++ b/index.html
@@ -15,22 +15,6 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="navbar">
-                    <ul>
-                        <li>HOME</li>
-                        <li>ABOUT US</li>
-                        <li>SERVICES</li>
-                        <li>WHAT WE DO</li>
-                        <li>PORTFOLIO</li>
-                        <li>CONTACT US</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </header>
 
     <div class="container">
         <div id="home">
@@ -52,7 +36,7 @@
             </div>
         </div>
     </div>
-    </div>
+
 
     <div class="container">
 
@@ -81,6 +65,17 @@
             <img class="simage" src="assets/backgrounds/s_image.jpg" alt="">
             <div class="service">
                 <h4>SERVICES</h4>
+                <p>
+                    Before we sign a contract or write a line of code, our team will spend the necessary
+                    time needed to understand your product vision.
+                </p>
+                <p>
+                    The outcome of this scoping session is proposal or high-level statement of work.
+                </p>
+                <p>
+                    Based on your requirements, we can provide a complete offering or just
+                    the pieces you need.
+                </p>
 
 
             </div>
@@ -88,46 +83,11 @@
 
     </div>
 
+
     <div class="container">
-        <div id="do">
+        <div class="do">
             <h4>WHAT WE DO</h4>
-
-            <div class="box">
-                <div id="design2">
-                    <div id="designIcon2">
-                        <img src="assets/services_icons/dev_icon.png" alt="">
-                    </div>
-                    <div id="designText2">
-                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
-                            They collaborate with your team to write, and improve code on a daily basis, using proven
-                            practices such as test-driven development and pair programming.
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-            <div class="box">
-                <div id="design1">
-                    <div id="designIcon1">
-                        <img src="assets/services_icons/product_icon.png" alt="">
-                    </div>
-                    <h5></h5>
-                    <div id="designText1">
-                        <p>
-                            Planning and development is iterative. Because we are constantly coding and testing, the
-                            products we build are always ready to go live.
-                            This iterative process allows for changes as business requirements evolve.
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-
         </div>
-
-    </div>
-
-    <div class="container">
         <div class="card-deck">
             <div class="card" id="design">
                 <div id="designIcon">
@@ -147,31 +107,62 @@
                     </p>
                 </div>
             </div>
-            <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+            <div class="card" id="development">
+                <div id="developmentIcon">
+                    <img class="icon1" src="assets/services_icons/dev_icon.png" alt="">
+                </div>
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    <h5 class="card-title">Development</h5>
+                </div>
+                <div id="developmentText">
+                    <p>
+                        All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        They collaborate with your team to write, and improve code on a daily basis, using proven
+                        practices such as test-driven development and pair programming.
+
                     </p>
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
             </div>
-            <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This card has even longer content than the first to show that equal height action.</p>
+            <div class="card" id="product">
+                <div id="productIcon">
+                    <img class="icon1" src="assets/services_icons/product_icon.png" alt="">
                 </div>
-                <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                <div class="card-body">
+                    <h5 class="card-title">Product Management</h5>
+                </div>
+                <div id="productText">
+                    <p>
+                        Planning and development is iterative. Because we are constantly coding and testing, the
+                        products we build are always ready to go live.
+                        This iterative process allows for changes as business requirements evolve.
+
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <img src="assets/portfolio/work1.jpg">
+                <img src="assets/portfolio/work2.jpg">
+
+            </div>
+            <div class="column">
+                <img src="assets/portfolio/work3.jpg">
+                <img src="assets/portfolio/work4.jpg">
+
+            </div>
+            <div class="column">
+                <img src="assets/portfolio/work5.jpg">
+                <img src="assets/portfolio/work6.jpg">
+            </div>
+            <div class="column">
+                <img src="assets/portfolio/work7.jpg">
+                <img src="assets/portfolio/work8.jpg">
+            </div>
+        </div>
 
 </body>
 
