--- a/index.html
+++ b/index.html
@@ -143,27 +143,60 @@
     </div>
 
     <div class="container">
+        <h4>PORTFOLIO</h4>
         <div class="row">
             <div class="column">
                 <img src="assets/portfolio/work1.jpg">
                 <img src="assets/portfolio/work2.jpg">
-
-            </div>
-            <div class="column">
                 <img src="assets/portfolio/work3.jpg">
                 <img src="assets/portfolio/work4.jpg">
-
             </div>
             <div class="column">
                 <img src="assets/portfolio/work5.jpg">
                 <img src="assets/portfolio/work6.jpg">
-            </div>
-            <div class="column">
                 <img src="assets/portfolio/work7.jpg">
                 <img src="assets/portfolio/work8.jpg">
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container">
+
+        <img src="assets/backgrounds/c_image.jpg" alt="">
+        <div class="contacts">
+            <h4>CONTACT US</h4>
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="usr"></label>
+                    <input type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label for="pwd"></label>
+                    <input type="email" class="form-control" placeholder="email">
+                </div>
+            </form>
+
+            <div class="form-group">
+                <label for="comment"></label>
+                <textarea class="form-control" rows="5" placeholder="Your message here..."></textarea>
             </div>
         </div>
+    </div>
 
+    <div class="social-links">
+        <img src="assets/social_icons/behance.png" alt="">
+        <img src="assets/social_icons/dribble.png" alt="">
+        <img src="assets/social_icons/facebook.png" alt="">
+        <img src="assets/social_icons/flickr.png" alt="">
+        <img src="assets/social_icons/g_plus.png" alt="">
+        <img src="assets/social_icons/pinterest.png" alt="">
+        <img src="assets/social_icons/skype.png" alt="">
+        <img src="assets/social_icons/stumble_upon.png" alt="">
+        <img src="assets/social_icons/twitter.png" alt="">
+        <img src="assets/social_icons/you_tube.png" alt="">
+    </div>
 </body>
 
 </html>
