--- a/index.html
+++ b/index.html
@@ -143,38 +143,38 @@
     <div>
         <h4 class="portfolio">PORTFOLIO</h4>
         <div class="grid">
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="1" src="assets/portfolio/work1.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="2" src="assets/portfolio/work2.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="3" src="assets/portfolio/work3.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="4" src="assets/portfolio/work4.jpg">
             </div>
 
         </div>
         <div class="grid">
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="5" src="assets/portfolio/work5.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="6" src="assets/portfolio/work6.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="7" src="assets/portfolio/work7.jpg">
             </div>
-            <div class="icon1">
+            <div class="icon2">
                 <div class="centered">Delani</div>
                 <img id="8" src="assets/portfolio/work8.jpg">
             </div>
@@ -227,9 +227,17 @@
         <img src="assets/social_icons/you_tube.png" alt="">
     </div>
 
+    <footer>
+        <div class="footer-info">
+            <p>DELANI STUDIO</p>
+            <p>2019</p>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/index.js"></script>
+
 
 </body>
 
